--- a/FirstPractice/app/src/main/res/layout/song_element.xml
+++ b/FirstPractice/app/src/main/res/layout/song_element.xml
@@ -20,8 +20,10 @@
         android:layout_marginTop="10dp"
         android:layout_marginLeft="10dp"
         android:layout_width="0dp"
+        android:textSize="25dp"
+        android:textColor="@android:color/black"
         android:layout_height="wrap_content"
-        android:hint="Song name"
+        android:hint="@string/song_element_name"
         />
 
     <TextView
@@ -32,7 +34,14 @@
         android:layout_marginLeft="10dp"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:hint="Artist"
+        android:hint="@string/song_element_artist"
+        />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        app:layout_constraintTop_toBottomOf="@id/iv_album"
+        android:background="@color/list_separator_gray"
         />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
