--- a/SecondPractice/app/src/main/res/values/colors.xml
+++ b/SecondPractice/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
 
     <!--  Custom colors  -->
     <color name="list_separator_gray">#EEEEEE</color>
+    <color name="button_pass_recover_blue">#688AFF</color>
 </resources>
