--- a/SecondPractice/app/src/main/res/layout/activity_lyrics_catalog.xml
+++ b/SecondPractice/app/src/main/res/layout/activity_lyrics_catalog.xml
@@ -27,13 +27,38 @@
         tools:layout_editor_absoluteX="139dp"
         tools:layout_editor_absoluteY="-3dp" />
 
+    <TextView
+        android:id="@+id/tvUser"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
+        android:layout_marginBottom="15dp"
+        app:layout_constraintTop_toBottomOf="@id/tv_catalog_title"
+        android:textSize="17dp"
+        android:gravity="left"
+        android:layout_marginLeft="20dp"
+        android:hint="Usuario"/>
+
+    <ImageView
+        android:id="@+id/ivLogout"
+        android:layout_width="45dp"
+        android:layout_height="45dp"
+        android:src="@drawable/logouticon"
+        android:layout_marginRight="100dp"
+        android:layout_marginTop="15dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toRightOf="@id/tvUser"
+        app:layout_constraintTop_toBottomOf="@id/tv_catalog_title"
+        />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvCatalog"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="20dp"
+        android:layout_margin="5dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tv_catalog_title"
+        app:layout_constraintTop_toBottomOf="@id/tvUser"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         />
