--- a/SecondPractice/app/src/main/res/layout/activity_lyrics_detail.xml
+++ b/SecondPractice/app/src/main/res/layout/activity_lyrics_detail.xml
@@ -37,16 +37,27 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tv_title" />
 
+
+       <com.airbnb.lottie.LottieAnimationView
+           android:id="@+id/laLocation"
+           android:layout_width="80dp"
+           android:layout_height="80dp"
+           app:layout_constraintTop_toBottomOf="@id/tv_artist"
+           app:layout_constraintLeft_toLeftOf="parent"
+           app:layout_constraintRight_toRightOf="parent"
+           android:layout_marginTop="10dp">
+       </com.airbnb.lottie.LottieAnimationView>
+
         <TextView
             android:id="@+id/tv_album"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="10dp"
             android:text="@string/detail_album"
             android:layout_marginLeft="20dp"
             android:textSize="18sp"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tv_artist" />
+            app:layout_constraintTop_toBottomOf="@id/laLocation" />
 
         <TextView
             android:id="@+id/tv_release_date"
