--- a/SecondPractice/app/src/main/res/values/google_maps_apikey.xml
+++ b/SecondPractice/app/src/main/res/values/google_maps_apikey.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyAg9ToD4587tmdkjValzBH31PTn3UtGn5A</string>
+    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false"></string>
 </resources>
